--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -4,7 +4,7 @@
 @import "./colors";
 @import "./default";
 @import "./material-overrides";
-// @import "./spacers";
+@import "./spacers";
 @import "./text-align";
 
 //components
