Implement changes for Task Wise Hours Details chart and Timer Widget

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,12 @@
+<!-- <div class="main-contain">
+  <div class="header-wrapper">
+    <div class="navigation-container">
+      Sample Syncfusion Code
+    </div>
+  </div>
+  <div class="content-body-wrapper">
+    <router-outlet></router-outlet>
+    <app-custom-notifications></app-custom-notifications>
+  </div>
+</div> -->
 <router-outlet></router-outlet>
