--- a/src/app/modules/dashboard/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard/dashboard.component.html
@@ -1,5 +1,18 @@
 <div class="dashboard-wrapper">
     <div class="sidenav-body-content">
+      <div class="content-header">
+        <div class="content-header-input">
+          <button
+            class="action-button primary-button"
+            mat-button
+            disableRipple
+            (click)="addWidgetClick()"
+          >
+            <mat-icon>add</mat-icon>
+            <span>Add Widget</span>
+          </button>
+        </div>
+      </div>
         <div class="control-section">
           <ejs-dashboardlayout
             columns="3"
@@ -234,20 +247,10 @@
                         <div
                           class="wp-50 text-align-center pt-10 pb-10 hr-right fw-bold"
                         >
-                          <img
-                            src="assets/images/profit.svg"
-                            width="15px"
-                            class="mr-10"
-                            alt="profit"
-                          />Profit
+                          Profit
                         </div>
                         <div class="wp-50 text-align-center pt-10 pb-10 fw-bold">
-                          <img
-                            src="assets/images/hour.svg"
-                            width="18px"
-                            class="mr-10"
-                            alt="hours"
-                          />Working Hours
+                          Working Hours
                         </div>
                       </div>
                     </div>
@@ -602,7 +605,54 @@
                     </div>
                   </div>
                   <div class="dash-body pb-0">
-                    <p>Testing >> Task Wise Hours Details</p>
+                    <div *ngIf="seriesData.length">
+                      <div class="d-flex justify-content-center gap-30 total-invoice">
+                        <div class="total-invoice-wrapper text-align-center">
+                          <p class="total-title mb-5">Total Hours</p>
+                          <p class="fw-bold font-size-16 mb-0">
+                            {{ taskWiseHoursDetails.totalHours }}
+                          </p>
+                        </div>
+                        <div class="total-invoice-wrapper text-align-center">
+                          <p class="total-title mb-5">Billable Hours</p>
+                          <p class="fw-bold text-success font-size-16 mb-0">
+                            {{ taskWiseHoursDetails.totalBillableHours }}
+                          </p>
+                        </div>
+                        <div class="total-invoice-wrapper text-align-center">
+                          <p class="total-title mb-5">Non-Billable Hours</p>
+                          <p class="fw-bold text-danger-100 font-size-16 mb-0">
+                            {{ taskWiseHoursDetails.totalNonBillableHours }}
+                          </p>
+                        </div>
+                      </div>
+                      <ejs-chart
+                        id="chart-container"
+                        class="weekly-box"
+                        [palettes]="palette"
+                        [primaryXAxis]="primaryXAxis"
+                        [primaryYAxis]="primaryYAxis"
+                        [tooltip]="tooltip"
+                        [legendSettings]="legend"
+                      >
+                        <e-series-collection>
+                          <ng-container *ngFor="let series of seriesData">
+                            <e-series
+                              [dataSource]="series.data"
+                              type="StackingColumn"
+                              columnWidth="0.3"
+                              [name]="series.name"
+                              xName="x"
+                              yName="y"
+                            ></e-series>
+                          </ng-container>
+                        </e-series-collection>
+                      </ejs-chart>
+                    </div>
+                    <div class="norecord-chart" *ngIf="seriesData?.length === 0">
+                      <img src="assets/images/column-icon.svg" alt="Column Chart" />
+                      <p class="pt-10">No data available yet!</p>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -631,11 +681,44 @@
                     </span>
                   </div>
                   <div class="dash-body text-align-center pt-2 pb-2">
-                    <p>Testing >> Timer Widget</p>
+                    <div class="text-align-center">
+                      <img
+                        src="assets/images/timer-img.svg"
+                        alt="Timer"
+                        width="70px"
+                      />
+                    </div>
+                    <div class="wp-100 mt-2">
+                      <div class="form-field">
+                        <mat-form-field appearance="fill" class="w-200">
+                          <mat-select
+                            #mytask
+                            panelClass="myPanelClass"
+                            placeholder="VAT Return Forms"
+                            [disableOptionCentering]="true"
+                          >
+                            <mat-option value="0">VAT Return Forms</mat-option>
+                            <mat-option value="1">VAT Return Forms</mat-option>
+                          </mat-select>
+                        </mat-form-field>
+                      </div>
+
+                      <button
+                        class="action-button secondary-button timer-icon"
+                        mat-dialog-close
+                        disableRipple
+                        type="button"
+                        mat-button
+                        disableRipple
+                      >
+                        <mat-icon fontSet="material-icons-outlined">timer</mat-icon>
+                        Start Timer
+                      </button>
                   </div>
-                </div>
               </div>
-              <div
+            </div>
+          </div>
+          <div
             *ngIf="
               widget.widgetId === dashboardWidget.FeesSummary && widget.isEnable
             "
