--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -6,9 +6,9 @@ $black: #000000;
 $light: #fbfbfb;
 $dark: #0f192b;
 
-$primary: var(--theme-primary-50);
-$primary-100: var(--theme-primary-100);
-$primary-200: var(--theme-primary-200);
+$primary: #6661b8;
+$primary-100: #4b4692;
+$primary-200: #f1f0ff;
 $primary-300: var(--theme-primary-300);
 
 $purple-color: #6d41a1;
